# evolai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-validator.txt  requirements.txt  setup.py
evolai/: __init__.py
evolai/cli/: __init__.py  main.py
evolai/cli/commands/: __init__.py  miner.py  validator.py  voter.py
evolai/miner/: __init__.py
evolai/utils/: __init__.py  metadata.py
evolai/validator/: __init__.py  challenge_client.py  compaction.py  config.py  context_guard.py  cooldown.py  cost_tracker.py  epoch_manager.py  error_handling.py  evaluator.py  gpu_health_monitor.py  gpu_manager.py  health_checks.py  judge_client.py  lifecycle.py  logging_config.py  loop_detector.py  loss_evaluator.py  metrics.py  model_fingerprint.py  orchestrator.py  payload_trace.py  progress_tracker.py  prompts.py  rate_limiter.py  resource_manager.py  retry.py  round_manager.py  sanitizer.py  scoring.py  side_quests.py  streaming.py  usage.py  vllm_client.py
scripts/: setup-validator.sh
